# web-tool

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  HANDOFF_FIX_CODE_REVIEW.md  ISSUES.md  LICENSE  Makefile  README.md  REQUIREMENTS.md  TESTING.md  TEST_COVERAGE.md  TITLE_VARIANTS.md  TODO.md  build-it.sh  links.html  links3.html  pyproject.toml  pytest.ini  requirements.txt  run-it.sh  web-tool.py
.github/workflows/: docker.yml
docs/superpowers/plans/: 2026-04-08-paste-favicon-plan.md  2026-04-09-image-dimensions-plan.md  2026-04-10-mirror-links-extracted-links-plan.md  2026-04-17-full-sweep-cleanup.md  2026-04-17-python-3.14-upgrade.md  2026-04-17-visual-redesign.md  2026-04-18-dockerfile-improvements.md  2026-04-18-local-docker-release.md  2026-04-18-mirror-links-bugfixes.md  2026-04-18-paste-favicon-mirror-favicons.md  2026-04-19-readme-contributing-split.md  2026-04-20-fragment-text-editing-plan.md  2026-04-20-fragment-text-ui-fix-plan.md
docs/superpowers/specs/: 2026-04-07-dockerfile-improvement-design.md  2026-04-09-image-dimensions-design.md  2026-04-10-mirror-links-extracted-links-design.md  2026-04-10-mirror-links-page-spec.md  2026-04-17-faviconW-reference-error-design.md  2026-04-17-full-sweep-cleanup-design.md  2026-04-17-python-3.14-upgrade-design.md  2026-04-17-visual-redesign-design.md  2026-04-18-dockerfile-improvements-design.md  2026-04-18-local-docker-release-design.md  2026-04-18-mirror-links-bugfixes-design.md  2026-04-18-paste-favicon-mirror-favicons-design.md  2026-04-19-readme-contributing-split-design.md  2026-04-20-fragment-text-ui-fix-design.md  2026-04-20-mirror-links-fragment-text-design.md
local-cache/: favicon.yml
routes/: __init__.py  debug.py  javascript.py  mirror_favicons.py  mirror_links.py
specs/: 2026-04-10-web-tool-page-specs-design.md  2026-04-10-web-tool-page-specs-plan.md  web-tool-spec.md
specs/pages/: clip-proxy.md  debug-clip-cache.md  debug-clipboard-proxy.md  debug-container.md  debug-favicon-files.md  debug-inline-image.md  debug-title-variants.md  debug-url-variants.md  mirror-clip.md  mirror-favicons.md  mirror-html-source.md  mirror-links-original.md  mirror-links.md  mirror-soup-text.md  mirror-text-debug.md  mirror-text.md  test-page.md  test-pages-interactive.md
static/: __init__.py  default.css  favicon-cache-new.yml  favicon-overrides.yml  favicon.yml  mirror.css  prism-mini.css  prism-mini.js  prism.css  prism.js
static/js/: inline-image.js  paste-favicon.js  tooltip.js
templates/: __init__.py  clip-proxy.html  debug-clipboard-proxy.html  debug-inline-image.html  debug-title-variants.html  debug-url-variants.html  mirror-favicons.html  mirror-links.html  mirror.js  plain_text.html  test-page.html  test-pages-interactive.html
tests/: __init__.py  conftest.py  test_clipboard.py  test_docker_util.py  test_favicon_validation.py  test_fragment_variants.py  test_html_util.py  test_img_util.py  test_integration_pages.py  test_js_escaping.py  test_markdown_escaping.py  test_text_util.py  test_title_strings.py  test_title_variants.py  test_unicode_util.py  test_url_decoding.py  test_url_util.py
web_tool.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
