[project]
name = "web-tool"
version = "0.1.0"
description = ""
authors = [
    {name = "gitmanntoo", email = "gitmanntoo@proton.me"}
]
readme = "README.md"
requires-python = ">=3.11,<3.12"

dependencies = [
    "beautifulsoup4>=4.12.3",
    "lxml>=5.0.0",
    "markdown>=3.7",
    "flask>=3.1.0",
    "requests>=2.32.3",
    "pyyaml>=6.0.2",
    "jsmin>=3.0.1",
    "esprima>=4.0.1",
    "pyperclip>=1.9.0",
    "pillow>=11.0.0",
    "tldextract>=5.1.3",
    "nltk>=3.9.1",
    "magika>=0.5.1",
    "anyascii>=0.3.2",
    "cairosvg>=2.7.1",
    "pymupdf>=1.25.5",
    "psutil>=6.1.0",
]

[project.optional-dependencies]
dev = [
    "ipykernel>=6.29.5",
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.9.0",
] 

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "."}
packages = ["library", "static", "templates"]

# Ruff configuration
[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # Pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "W",   # pycodestyle warnings
    "UP",  # pyupgrade
]
ignore = [
    "W293",  # Blank line contains whitespace (common in docstrings)
    "W291",  # Trailing whitespace (handled by formatter)
    "N815",  # Variable in class scope should not be mixedCase (API field names)
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint.isort]
known-first-party = ["library"]