[project]
name = "web-tool"
version = "0.1.0"
description = ""
authors = [
    {name = "gitmanntoo", email = "gitmanntoo@proton.me"}
]
readme = "README.md"
requires-python = ">=3.14,<3.15"

dependencies = [
    "beautifulsoup4>=4.14.3",
    "lxml>=6.0.0",
    "markdown>=3.10.2",
    "flask>=3.1.3",
    "requests>=2.33.1",
    "pyyaml>=6.0.3",
    "jsmin>=3.0.1",
    "esprima>=4.0.1",
    "pyperclip>=1.11.0",
    "pillow>=12.2.0",
    "nltk>=3.9.4",
    "magika>=1.0.0",
    "anyascii>=0.3.2",
    "cairosvg>=2.9.0",
    "pymupdf>=1.27.2",
    "psutil>=7.0.0",
]

[project.optional-dependencies]
dev = [
    "ipykernel>=6.30.0",
    "pytest>=8.0.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.11.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "."}
packages = ["library", "routes", "static", "templates"]

# Ruff configuration
[tool.ruff]
target-version = "py314"
line-length = 100
extend-exclude = ["library/docker_util.py"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # Pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "W",   # pycodestyle warnings
    "UP",  # pyupgrade
]
ignore = [
    "W293",  # Blank line contains whitespace (common in docstrings)
    "W291",  # Trailing whitespace (handled by formatter)
    "N815",  # Variable in class scope should not be mixedCase (API field names)
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint.isort]
known-first-party = ["library"]